# -

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  全视维插件使用手册.docx
.github/workflows/: release.yml
browser-extension/: README.md  background.js  manifest.json  options.html  popup.html  popup.js
compat-samples/: REPORT.md  analyze.mjs  harness.mjs
docs/: web-clipper-使用手册.docx  web-clipper-使用手册.md
plugins-sample/hello-world/: main.js  plugin.json
scripts/: _bump.cjs  make-clipper-icons.cjs  md_to_docx.py  pack-clipper.cjs
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  backup.rs  comments.rs  encryption.rs  error.rs  graph.rs  lib.rs  main.rs  model.rs  parser.rs  search_index.rs  state.rs  watcher.rs
src-tauri/src/commands/: ai.rs  assets.rs  backup.rs  block.rs  clip_http.rs  clip_log.rs  clip_token.rs  clipper.rs  comments.rs  dashboard.rs  encryption.rs  graph.rs  history.rs  journal.rs  marketplace.rs  mod.rs  net.rs  page.rs  pdf.rs  plugin.rs  query.rs  references.rs  search.rs  template.rs  transfer.rs  update.rs  whiteboard.rs
src-tauri/src/query/: mod.rs  parse.rs
src-tauri/src/storage/: encrypted.rs  fs.rs  mod.rs  sqlite.rs
src/components/: AddGraphMenu.tsx  AgendaView.tsx  AiPanel.tsx  AiSection.tsx  AliasEditor.tsx  AssetMedia.tsx  Backlinks.tsx  BacklinksPanel.tsx  BackupSection.tsx  BlockEmbed.tsx  BlockHistoryPanel.tsx  BlockRow.tsx  BlockTree.tsx  CalendarView.tsx  (+36 more)
web-clipper-extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
(+41 files in other folders)
