[package]
name = "logseq-rs"
version = "0.1.8"
description = "全视维 — 本地优先的知识图谱应用。"
authors = ["you"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "logseq_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-fs = "2.0.3"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
regex = "1"
once_cell = "1"
notify = "7"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
zeroize = "1.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enable web inspector only in debug builds to keep the release/Android
# binary smaller. Use `cargo build --features devtools` to opt in.
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
incremental = false
